2005-04-07  Carlos Garnacho Parro  <carlosg@gnome.org>

	* address-list.c: allow IPV6 DNSs too. Fixes #171826

2005-03-29  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-iface-isdn.c: fixed bug where "noauth" was only applied to
	already configured interfaces

2005-03-07  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.2.0

2005-03-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* callbacks.c: make the "enabled" and "auto" interface values match
	as they should

2005-03-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.92

2005-03-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* callbacks.[ch], ifaces-list.c, main.c: finally committed this
	remaining patch to change gateways on the fly when there was none
	selected and user activates an interface with default gateway

2005-02-24  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gst-network-tool.c: plug a leak

2005-02-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-iface.c: show a string really translated

2005-02-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-iface-isdn.c: handle noauth stuff, default it to TRUE (quite
	sane IMHO) until I can add some UI for this...

2005-02-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* connection.c: only add cellrenderers once to the essids
	GtkComboBoxEntry.

2005-02-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.91

2005-01-27  Carlos Garnacho Parro  <carlosg@gnome.org>

	* callbacks.[ch], hosts.[ch], main.c: added some extra checks to ensure 
	that any IP address in the hosts file has alias(es)

2005-01-27  Carlos Garnacho Parro  <carlosg@gnome.org>

	* hosts.c: prevent it to crash with wrong hosts file (i.e.: IP address
	without aliases)

2005-01-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* hosts.c: added ellipsizing to the table in the case that there are
	too many hostnames for a single IP address

2005-01-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.90
